--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
                         <h5 class="card-title h-25">How The EMP Coaching</h5>
                         <br>
                         <p class="card-text h-75">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                    </div>
+                    <div class="card-footer border-0 bg-transparent">
                         <hr class="w-25 m-auto">
                         <a href="#" class="btn btn-light mt-4">LEARN MORE</a>
-                    </div> 
+                    </div>
                 </div>
             </div>
             <div class="col-md-3 my-3">
@@ -70,9 +72,11 @@
                         <h5 class="card-title h-25">How To Refer People & <br>Make Money</h5>
                         <br>
                         <p class="card-text h-75">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                    </div>
+                    <div class="card-footer border-0 bg-transparent">
                         <hr class="w-25 m-auto">
                         <a href="#" class="btn btn-light mt-4">LEARN MORE</a>
-                    </div> 
+                    </div>
                 </div>
             </div>
             <div class="col-md-3 my-3">
@@ -82,6 +86,8 @@
                         <h5 class="card-title h-25">How To Get Help & Support</h5>
                         <br>
                         <p class="card-text h-75">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                    </div> 
+                    <div class="card-footer border-0 bg-transparent">
                         <hr class="w-25 m-auto">
                         <a href="#" class="btn btn-light mt-4">LEARN MORE</a>
                     </div> 
@@ -95,9 +101,11 @@
                         <br>
                         <p class="card-text h-75">
                             Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                    </div>
+                    <div class="card-footer border-0 bg-transparent">
                         <hr class="w-25 m-auto">
                         <a href="#" class="btn btn-light mt-4">LEARN MORE</a>
-                    </div> 
+                    </div>  
                 </div>
             </div>
             <div class="col-md-3 my-3">
@@ -108,6 +116,8 @@
                         <br>
                         <p class="card-text h-75">
                             Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                    </div>
+                    <div class="card-footer border-0 bg-transparent">
                         <hr class="w-25 m-auto">
                         <a href="#" class="btn btn-light mt-4">LEARN MORE</a>
                     </div> 
