--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Css-framework-bootstrap exercise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+        .custom-button {
+            background-color: white;
+            border: none;
+            color: #6c757d;
+            border-radius: 50px;
+            cursor: pointer;
+        }
+        .custom-button:hover {
+            background-color: #007bff;
+            color: white;
+            border-radius: 50px;
+        }
+        .custom-shadow {
+        transition: box-shadow 0.3s;
+        }
+        .custom-shadow:hover {
+        box-shadow: 0 16px 32px rgba(0, 0, 0, 0.15);
+        }
+    </style>
 </head>
-<body class="bg-white p-0 m-0">
-    <div class="container-fluid text-center" style="text-align: center;">
+<body class="bg-primary-subtle p-0 m-0">
+    <div class="container-fluid text-center" style="text-align: center">
         <div class="row p-5">
             <div class="col-md-3 my-3">
-                <div class="card border-0 shadow h-100">
+                <div class="card border-0 custom-shadow h-100">
                     <img src="/officebuilding.jpg" alt="" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title h-25">Your EMP Back<br>OfficeTour</h5>
@@ -19,12 +39,12 @@
                     </div>
                     <div class="card-footer border-0 bg-transparent">
                         <hr class="w-25 m-auto">
-                        <a href="#" class="btn btn-light mt-4">LEARN MORE</a>
+                        <a href="#" class="btn custom-button my-5">LEARN MORE</a>
                     </div>
                 </div> 
             </div>
             <div class="col-md-3 my-3">
-                <div class="card border-0 shadow h-100">
+                <div class="card border-0 custom-shadow h-100">
                     <img src="/browserwindow.jpg" alt="" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title h-25">An overview of Insider<br>Tools & Benefits</h5>
@@ -33,12 +53,12 @@
                     </div>
                     <div class="card-footer border-0 bg-transparent">
                         <hr class="w-25 m-auto">
-                        <a href="#" class="btn btn-light mt-4">LEARN MORE</a>
+                        <a href="#" class="btn custom-button my-5">LEARN MORE</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3 my-3">
-                <div class="card border-0 shadow h-100">
+                <div class="card border-0 custom-shadow h-100">
                     <img src="/clipboard.jpg" alt="" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title h-25">The EMP Affiliate<br>Compensation Plan</h5>
@@ -47,12 +67,12 @@
                     </div>
                     <div class="card-footer border-0 bg-transparent">
                         <hr class="w-25 m-auto">
-                        <a href="#" class="btn btn-light mt-4">LEARN MORE</a>
+                        <a href="#" class="btn custom-button my-5">LEARN MORE</a>
                     </div> 
                 </div>
             </div>
             <div class="col-md-3 my-3">
-                <div class="card border-0 shadow h-100">
+                <div class="card border-0 custom-shadow h-100">
                     <img src="/moneyhand.jpg" alt="" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title h-25">How The EMP Coaching</h5>
@@ -61,12 +81,12 @@
                     </div>
                     <div class="card-footer border-0 bg-transparent">
                         <hr class="w-25 m-auto">
-                        <a href="#" class="btn btn-light mt-4">LEARN MORE</a>
+                        <a href="#" class="btn custom-button my-5">LEARN MORE</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3 my-3">
-                <div class="card border-0 shadow h-100">
+                <div class="card border-0 custom-shadow h-100">
                     <img src="/dollarsign.jpg" alt="" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title h-25">How To Refer People & <br>Make Money</h5>
@@ -75,12 +95,12 @@
                     </div>
                     <div class="card-footer border-0 bg-transparent">
                         <hr class="w-25 m-auto">
-                        <a href="#" class="btn btn-light mt-4">LEARN MORE</a>
+                        <a href="#" class="btn custom-button my-5">LEARN MORE</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3 my-3">
-                <div class="card border-0 shadow h-100">
+                <div class="card border-0 custom-shadow h-100">
                     <img src="/lifeline.jpg" alt="" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title h-25">How To Get Help & Support</h5>
@@ -89,12 +109,12 @@
                     </div> 
                     <div class="card-footer border-0 bg-transparent">
                         <hr class="w-25 m-auto">
-                        <a href="#" class="btn btn-light mt-4">LEARN MORE</a>
+                        <a href="#" class="btn custom-button my-5">LEARN MORE</a>
                     </div> 
                 </div>
             </div>
             <div class="col-md-3 my-3">
-                <div class="card border-0 shadow h-100">
+                <div class="card border-0 custom-shadow h-100">
                     <img src="/laptop.jpg" alt="" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title h-25">Getting Started:<br>The Essential Trainings</h5>
@@ -104,12 +124,12 @@
                     </div>
                     <div class="card-footer border-0 bg-transparent">
                         <hr class="w-25 m-auto">
-                        <a href="#" class="btn btn-light mt-4">LEARN MORE</a>
+                        <a href="#" class="btn custom-button my-5">LEARN MORE</a>
                     </div>  
                 </div>
             </div>
             <div class="col-md-3 my-3">
-                <div class="card border-0 shadow h-100">
+                <div class="card border-0 custom-shadow h-100">
                     <img src="/paperplane.jpg" alt="" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title h-25">The Fastest Way To Get<br>Your First Sale</h5>
@@ -119,7 +139,7 @@
                     </div>
                     <div class="card-footer border-0 bg-transparent">
                         <hr class="w-25 m-auto">
-                        <a href="#" class="btn btn-light mt-4">LEARN MORE</a>
+                        <a href="#" class="btn custom-button my-5">LEARN MORE</a>
                     </div> 
                 </div>
             </div>
